# dragontag

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  README.me  SESSION_HANDOFF.md  TASKS.md  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/: pull_request_template.md
aio_tagger/: __init__.py
alembic/: env.py
docs/: VERSIONING.md
dragontag/: __init__.py
frontend/: README.md  app.input.css  build_css.sh  tailwind.config.js
scripts/: build_css.sh  bump_version.py
tests/: conftest.py  test_acoustid_timeout.py  test_advisory_rtng.py  test_album_consistency.py  test_album_consistency_pair_vote.py  test_album_election.py  test_album_link_mp4_totals.py  test_artist_split.py  test_artist_split_brackets.py  test_atomic_writes.py  test_backup_restore_crossfs.py  test_bug_sweep_apply_paths.py  test_bug_sweep_commit_per_move.py  test_bug_sweep_core.py  test_bug_sweep_library_integrity.py  test_bug_sweep_repo.py  test_bug_sweep_rollbacks.py  test_cleanup_artist_twins.py  test_cleanup_library.py  test_completions_page.py  test_config_atomic.py  test_config_validators.py  test_conflict_delete.py  test_cover_local_fallback.py  test_cover_overwrite_gate.py  test_coverart_mime.py  test_cron_describe.py  test_decompression_bomb_guard.py  test_destination_race.py  test_disc_folder_template.py  test_existing_tags.py  test_existing_tags_corrupt.py  test_existing_tags_mbid_readback.py  test_existing_tags_mp4.py  test_filelock.py  test_filename_parse_titles.py  test_fix_album_splits.py  test_fix_genres.py  (+61 more)
(+102 files in other folders)
