[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dragontag"
version = "0.1.13"
description = "Self-hosted audio tagger + library organizer driven by MusicBrainz/AcoustID"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlmodel>=0.0.22",
    "mutagen>=1.47",
    "musicbrainzngs>=0.7.1",
    "pyacoustid>=1.3",
    "requests>=2.32",
    "watchdog>=4.0",
    "argon2-cffi>=23.1",
    "Pillow>=10.3",
    "alembic>=1.13",
    "croniter>=2.0",
    "cron-descriptor>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dragontag*"]

[tool.setuptools.package-data]
"dragontag.app.identify" = ["data/*.txt"]
"dragontag.app.web" = ["templates/*.html", "static/*", "static/**/*"]
